Alignment fix for charts

--- a/css/dashboardStyle.css
+++ b/css/dashboardStyle.css
@@ -98,27 +98,8 @@ section:first-child {
     width: 0%;
 }
 
-/* .progress1 {
-    margin: 15px 3px 0 0;
-    background: var(--font-color);
-	-moz-border-radius: 26px;
-	-webkit-border-radius: 26px;
-	border-radius: 26px;
-    padding: 3px;
-    width: 50%;
-}
-.progress2 {
-    margin: 15px 0 0 0;
-    background: var(--font-color);
-	-moz-border-radius: 26px;
-	-webkit-border-radius: 26px;
-	border-radius: 26px;
-    padding: 3px;
-    width: 66%;
-} */
-
 .card-plot__title {
-    padding: 10px 0 6px 20px; 
+    padding: 15px 0 6px 20px; 
     font-size: 11px; 
     font-weight: lighter;
     text-transform: uppercase;
@@ -129,7 +110,7 @@ section:first-child {
 
 /* Plotting cards */
 .card-plot {
-    padding: 5px 5px 15px 15px;
+    padding: 40px 5px 15px 15px;
 }
 .plot {overflow: hidden;}
 
